--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https:fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css">
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
+	<script src='js/config.js'></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
 	<script src="js/main.js"></script>
